--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       puff pastry.
     </p>
     <footer>
-      <a href="/index.html">Homepage</a>
-      <a href="/photo.html">Croissant Photo</a>
-      <a href="/contact.html">Contanct Croissant.com</a>
+      <a href="/index.html" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/contact.html" title="Contact Croissant.com">Contanct</a>
     </footer>
   </body>
 </html>
