update of the EMail address from contact page

--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,7 @@
   <body>
     <h1>🥐 Contact up</h1>
     <p>
-      "If you wanna have chit chat about Croissant and whats a perfect one for
-      you, just write an E-Mail"
+      "If you wanna have a chat about perfect Croissants, just write an E-Mail"
       <a href="mailto:hello@croissant.com" title="email-contact"
         >hello@croissant.com</a
       >
