--- a/contact.html
+++ b/contact.html
@@ -9,12 +9,13 @@
   <body>
     <h1>🥐 Contact up</h1>
     <p>
-      " If you wanna have a chat about perfect Croissants, just write an E-Mail
-      "
+       If you wanna have a chat about perfect Croissants, just write an E-Mail
+      
       <a href="mailto:hello@croissant.com" title="email-contact"
         >hello@croissant.com</a
       >
-      " Here you come back to the other pages "
+    </br>
+       Back to Homepage 
     </p>
     <footer>
       <a href="/index.html" title="Home">Homepage</a>
