changes Contact up to Contact us

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Contact page</title>
   </head>
   <body>
-    <h1>🥐 Contact up</h1>
+    <h1>🥐 Contact us</h1>
     <p>
        If you wanna have a chat about perfect Croissants, just write an E-Mail
       
@@ -16,6 +16,7 @@
       >
 
     </br>
+    </hr>
     </hr>
     </br>
        Back to Homepage 
