--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
        Back to Homepage 
     </p>
     <footer>
-      <a href="/index.html" title="Home">Homepage</a>
+      <a href="/index.html" title="Homepage-link">Homepage</a>
       <a href="/photo.html" title="Croissant Photo">Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com">Contanct</a>
+      <a href="/contact.html" title="Contact Croissant-page">Contanct</a>
     </footer>
   </body>
 </html>
