--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="SEO turorial for learning front-end development with content Videos from SheCodes.io, this is the 3rd week responsive task"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Croissant Homepage</title>
+    <title>SEO task for a development tutorial for Women</title>
   </head>
   <body>
     <h1>Croissant 🥐</h1>
     <p>
       A croissant is a buttery, flaky, viennoiserie pastry inspired by the shape
       of the Austrian kipferl but using the French yeast-leavened laminated
-      dough.[1]Croissants are named for their historical crescent shape. The
-      dough is layered with butter, rolled and folded several times in
-      succession, then rolled into a thin sheet, in a technique called
-      laminating. The process results in a layered, flaky texture, similar to a
-      puff pastry.
+      dough. Croissants are named for their historical crescent shape. The dough
+      is layered with butter, rolled and folded several times in succession,
+      then rolled into a thin sheet, in a technique called laminating. The
+      process results in a layered, flaky texture, similar to a puff pastry.
     </p>
     <footer>
       <a href="/index.html" title="Home">Homepage</a>
