--- a/photo.html
+++ b/photo.html
@@ -10,13 +10,13 @@
     <h1>🥐 A Croissants Look</h1>
     <img
       src="/images/croissant.jpg"
-      alt="Bakery Croissant"
+      alt="Croissant-picture"
       class="the-picture"
     />
     <footer>
-      <a href="/index.html" title="Home">Homepage</a>
+      <a href="/index.html" title="Homepage-link">Homepage</a>
       <a href="/photo.html" title="Croissant Photo">Photo</a>
-      <a href="/contact.html" title="Contact Croissant.com">Contanct</a>
+      <a href="/contact.html" title="Contact Croissant-page">Contanct</a>
     </footer>
   </body>
 </html>
