--- a/photo.html
+++ b/photo.html
@@ -10,8 +10,8 @@
     <h1>🥐 A Croissants Look</h1>
     <img
       src="/images/croissant.jpg"
-      alt="Croissant-picture"
-      class="the-picture"
+      alt="theCroissant-picture"
+      class="croissant-picture"
     />
     <footer>
       <a href="/index.html" title="Homepage-link">Homepage</a>
